--- a/src/angular-schema-form-mask.html
+++ b/src/angular-schema-form-mask.html
@@ -2,7 +2,7 @@
 	<label class="control-label" ng-show="showTitle()">{{form.title}}</label>
     <div>
 
-		<input type='text' ng-model='$$value$$' mask='{{form.schema.maskFormat}}' mask-repeat='{{form.schema.maskRepeat || undefined}}' />
+		<input type="text" ng-model="$$value$$" mask="{{form.schema.maskFormat}}" mask-repeat="{{form.schema.maskRepeat || undefined}}" />
 
     </div>
     <span class="help-block">{{ (hasError() && errorMessage(schemaError())) || (form.schema.description || form.description)}}</span>
