added a class schema-form-mask for the form for being overridden using css

--- a/src/angular-schema-form-mask.html
+++ b/src/angular-schema-form-mask.html
@@ -1,4 +1,4 @@
-<div class="form-group" ng-class="{'has-error': hasError()}">
+<div class="form-group" ng-class="schema-form-mask {'has-error': hasError()}">
 	<label class="control-label" ng-show="showTitle()">{{form.title}}</label>
     <div>
 
