--- a/src/angular-schema-form-mask.html
+++ b/src/angular-schema-form-mask.html
@@ -1,4 +1,4 @@
-<div class="form-group" class="schema-form-mask" ng-class="{'has-error': hasError()}">
+<div class="form-group schema-form-mask" ng-class="{'has-error': hasError()}">
 	<label class="control-label" ng-show="showTitle()">{{form.title}}</label>
     <div>
 
