--- a/src/angular-schema-form-mask.html
+++ b/src/angular-schema-form-mask.html
@@ -1,6 +1,6 @@
 <div class="form-group schema-form-mask" ng-class="{'has-error': hasError()}">
 	<label class="control-label" ng-show="showTitle()">{{form.title}}</label>
-    <div>
+    <div class="schema-form-mask-container">
 
 		<input type="text" ng-model="$$value$$" mask="{{form.schema.maskFormat}}" mask-repeat="{{form.schema.maskRepeat || undefined}}" class="form-control"/>
 
